# PlaycanvasAssetProcessor

./: .editorconfig  .gitignore  App.config  App.xaml  App.xaml.cs  AssemblyInfo.cs  AssetProcessor.csproj  CLAUDE.md  HISTOGRAM_IMPROVEMENTS.md  MainWindow.Api.cs  MainWindow.Connection.cs  MainWindow.ContextMenuHandlers.cs  MainWindow.D3D11Viewer.TextureLoading.cs  MainWindow.D3D11Viewer.cs  MainWindow.DataGridColumns.Resize.cs  MainWindow.DataGridColumns.cs  MainWindow.DataGridGrouping.cs  MainWindow.Download.cs  MainWindow.GlbLod.Rendering.cs  MainWindow.GlbLod.cs  MainWindow.Helpers.cs  MainWindow.MasterMaterials.cs  MainWindow.Materials.cs  MainWindow.ModelViewer.Overlays.cs  MainWindow.ModelViewer.cs  MainWindow.Models.Export.cs  MainWindow.Models.Upload.cs  MainWindow.Models.cs  MainWindow.ServerAssets.cs  MainWindow.TextureConversionSettings.cs  MainWindow.TextureProcessing.cs  MainWindow.TextureSelection.cs  MainWindow.TextureViewerUI.ChannelFilter.cs  MainWindow.TextureViewerUI.Histogram.cs  MainWindow.TextureViewerUI.cs  MainWindow.ViewModelEventHandlers.cs  MainWindow.xaml  MainWindow.xaml.cs  ModelConversionWindow.xaml  ModelConversionWindow.xaml.cs  (+30 more)
.claude/: settings.local.json
AssetProcessor.Tests/: AssetProcessor.Tests.csproj  LocalCacheServiceTests.cs  MainViewModelFixture.cs  MainViewModelTests.cs  MainWindow.D3D11ViewerTests.cs  MainWindow.TextureViewerUITests.cs  ProjectAssetServiceTests.cs  SecureSettingsTests.cs  TEST_DOCUMENTATION.md
Native/meshoptimizer/: CMakeLists.txt  README.md  build.ps1  meshopt_wrapper.cpp  meshopt_wrapper.h
(+362 files in other folders)
